recipient field, send button validation, component objects

--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>edu.encrypted.file.transfer</groupId>
+			<artifactId>file-protocol-component</artifactId>
+			<version>0.1</version>
+		</dependency>
+	</dependencies>
 </project>
